--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,9 +2,9 @@
     <head>
         <title>Django Girls blog</title>
     </head>
-    div>
-    <h1><a href="/">Django Girls Blog</a></h1>
-</div>
+      <div>
+      <h1><a href="/">Django Girls Blog</a></h1>
+   </div>
 
 {% for post in posts %}
     <div>
